--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,10 @@ baseurl: /hydrogen
 #
 
 # 你的博客logo图片URL，建议尺寸不超过300px × 300px
-avatar: https://sm.ms/image/wJC3aI4bf92cArS
+avatar: https://s2.loli.net/2022/10/01/wJC3aI4bf92cArS.jpg
 
 # 你的favicon（出现在浏览器tab上）图片URL，建议使用较小(64px × 64px)的图片
-favicon: hhttps://sm.ms/image/wJC3aI4bf92cArS
+favicon: https://s2.loli.net/2022/10/01/wJC3aI4bf92cArS.jpg
 
 
 # 菜单中的按钮
