--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,10 @@ baseurl: /hydrogen
 #
 
 # 你的博客logo图片URL，建议尺寸不超过300px × 300px
-avatar: https://s2.loli.net/2022/10/01/wJC3aI4bf92cArS.jpg
+avatar: https://tuchuangs.com/imgs/2022/10/01/49ba9a5e9d168eaa.jpg
 
 # 你的favicon（出现在浏览器tab上）图片URL，建议使用较小(64px × 64px)的图片
-favicon: https://s2.loli.net/2022/10/01/wJC3aI4bf92cArS.jpg
+favicon: https://tuchuangs.com/imgs/2022/10/01/49ba9a5e9d168eaa.jpg
 
 
 # 菜单中的按钮
@@ -66,7 +66,7 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
 
 # 站点页脚的文字
-footer-text: Copyright (c) 2019 来自中世界
+footer-text: Copyright (c) 2020 Hy
 
 #
 # 评论，注意，请不要同时添加多种不同的评论区
